kubernetes/vue-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker/docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.service: vue
  name: vue
  namespace: aqra
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: vue
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker/docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      labels:
        io.kompose.network/aqra-network: "true"
        io.kompose.service: vue
    spec:
      containers:
        - envFrom:
            - secretRef:
                name:
                  vue-secret
          image: aqra-vue
          imagePullPolicy: Never
          livenessProbe:
            failureThreshold: 1
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 300
            timeoutSeconds: 60
          name: vue
          ports:
            - containerPort: 80
          resources: { }
      serviceAccountName: ""
