kubernetes/vue-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker/docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.service: vue
  name: vue
  namespace: aqra
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: vue
