kubernetes/resources.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker/docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.service: vue
  name: vue
  namespace: aqra
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: vue
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: vue-ingress
  namespace: aqra
spec:
  ingressClassName: nginx
  rules:
    - host: aqra.feit.ukim.edu.mk
      http:
        paths:
          - backend:
              service:
                name: vue
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - aqra.feit.ukim.edu.mk
      secretName: aqra-tls
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aqra-network
  namespace: aqra
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/aqra-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/aqra-network: "true"
